--- a/branches/hdf5_1_6/config/commence.in
+++ b/branches/hdf5_1_6/config/commence.in
@@ -28,6 +28,7 @@ CP=cp
 INSTALL=@INSTALL@
 INSTALL_PROGRAM=@INSTALL_PROGRAM@
 INSTALL_DATA=@INSTALL_DATA@
+PARALLEL=@PARALLEL@
 RUNSERIAL=@RUNSERIAL@
 RUNPARALLEL=@RUNPARALLEL@
 RUNTEST=$(RUNSERIAL)
