--- a/branches/hdf5_1_6/tools/misc/h5cc.in
+++ b/branches/hdf5_1_6/tools/misc/h5cc.in
@@ -73,6 +73,7 @@ usage() {
   echo "    -prefix=DIR  Prefix directory to find HDF5 lib/ and include/"
   echo "                   subdirectories [default: $prefix]"
   echo "    -show        Show the commands without executing them"
+  echo "    -showconfig  Show the HDF5 library configuration summary"
   echo "    -shlib       Compile with shared HDF5 libraries"
   echo "    -noshlib     Compile with static HDF5 libraries [default]"
   echo " "
@@ -92,6 +93,17 @@ usage() {
   echo " "
   exit 1
 }
+
+# Show the configuration summary of the library recorded in the
+# libhdf5.settings file reside in the lib directory.
+showconfigure()
+{
+  cat ${libdir}/libhdf5.settings
+  status=$?
+}
+
+# Main
+status=0
 
 if test "$#" = "0"; then
   # No parameters specified, issue usage statement and exit.
@@ -166,6 +178,10 @@ for arg in $@ ; do
       ;;
     -show)
       SHOW="echo"
+      ;;
+    -showconfig)
+      showconfigure
+      exit $status
       ;;
     -shlib)
       USE_SHARED_LIB="yes"
