Purpose: Bug fix.
Description:
OSF1 machine at PSC barked at "make install" because an intended
comment was inserted in the middle of the column.  This is not kosher
because officially, make comments should be started with # at column 1.

Solution:
Moved the comment of installing h5fc as h5pfc to start at column 1.

Platforms tested:
Not h5committested since this is exposed by the PSC machine and Elena
has tested the fix there.

Misc. update:

--- a/branches/hdf5_1_6/fortran/config/conclude.in
+++ b/branches/hdf5_1_6/fortran/config/conclude.in
@@ -62,6 +62,7 @@ $(EXAMPLEDIR):
 	$(top_srcdir)/bin/mkdirs $@
 
 ## Install the library, the public header files, and public programs.
+## Install h5fc as h5pfc for parallel mode.
 install: $(PUB_LIB) $(PUB_HDR) $(PUB_PROGS) $(libdir) $(includedir) $(bindir)
 	@for f in X $(PUB_LIB); do					      \
 	   if test $$f != X; then					      \
@@ -87,7 +88,6 @@ install: $(PUB_LIB) $(PUB_HDR) $(PUB_PROGS) $(libdir) $(includedir) $(bindir)
 	      fi;							      \
 	   fi;								      \
 	done
-	# install h5fc as h5pfc for parallel mode.
 	@for f in X $(PUB_PROGS); do					      \
 	   if test $$f != X; then					      \
 	     if test "X$(PARALLEL)" != "Xno" -a $$f = "h5fc"; then            \
