Purpose: Bug fix
Description:
make check without doing make first would fail to build testphdf5.

Solution:
Put the testphdf5 back in the target of TEST_PROG_PP and removed
the "testphdf" without any parameter from testph5.sh.

Platforms tested:
copper parallel. This is not relevant to non-parallel cases.

Misc. update:

--- a/branches/hdf5_1_6/testpar/Makefile.in
+++ b/branches/hdf5_1_6/testpar/Makefile.in
@@ -29,11 +29,11 @@ RUNTEST=$(RUNPARALLEL)
 
 ## Test programs and scripts.
 ##
-TEST_PROGS_PARA=t_mpi t_fphdf5
+TEST_PROGS_PARA=t_mpi t_fphdf5 testphdf5
 TEST_SCRIPTS=testph5.sh
 
 ## These are our main targets
-PROGS=$(TEST_PROGS_PARA) testphdf5
+PROGS=$(TEST_PROGS_PARA)
 
 ## Temporary files
 ## MPItest.h5 is from t_mpi
