Purpose:     Bug fix
Description:
    Added directory where actual source code is located to allow broken Intel
C 7.1 compiler to generate dependencies correctly.

Platforms tested:
    Linux 2.4 (titan)
    too minor to need h5committest

--- a/branches/hdf5_1_6/examples/Makefile.in
+++ b/branches/hdf5_1_6/examples/Makefile.in
@@ -21,7 +21,7 @@ srcdir=@srcdir@
 ## Replace building CC with the just installed h5cc
 H5CC=$(bindir)/h5cc
 H5CC_PP=$(bindir)/h5pcc
-CPPFLAGS=-I. -I$(srcdir)
+CPPFLAGS=-I. -I$(srcdir) -I$(top_srcdir)/src @CPPFLAGS@
 CFLAGS=
 
 ## These are the programs that `make all' or `make tests' will build and which
