--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -84,8 +84,12 @@ H5Tinit.c: H5detect
 	    ($(RM) $@ ; exit 1)
 
 ## no $(LIB) in the action below since that's being made now.
-H5detect: H5detect.lo
-	@$(LT_LINK_EXE) $(CFLAGS) -o $@ H5detect.lo $(LDFLAGS) $(LIBS)
+## No optimization since many compilers (e.g., Intel) takes a long time
+## to compile it with any optimization on.  H5detect is used to generate
+## H5Tinit.c once. So, optimization is not critical.
+H5detect: $(srcdir)/H5detect.c
+	$(CC) $(CFLAGS) $(CPPFLAGS) -O0 $(srcdir)/H5detect.c \
+	    $(LDFLAGS) $(LIBS) -o $@
 
 
 @CONCLUDE@
