Purpose: Bug fix, sort of.
Description:
Some compilers, e.g., intel compiler, would take a long time
to compiler H5detect.c if optimization is on.


Solution:
Setup special make rules for H5detect to be compiled always with
optimization off by using -g.  Since H5detect is run once to generate H5Tinit.c,
it does not matter that much if it is optimized or not.


Platforms tested:
"h5committested".
Tested in Titan too.

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -92,8 +92,12 @@ H5Tinit.c: H5detect
 	    ($(RM) $@ ; exit 1)
 
 ## no $(LIB) in the action below since that's being made now.
+## Use -g to force no optimization since many compilers (e.g., Intel) takes
+## a long time to compile it with any optimization on.  H5detect is used
+## to generate H5Tinit.c once. So, optimization is not critical.
 H5detect: H5detect.lo
-	@$(LT_LINK_EXE) $(CFLAGS) -o $@ H5detect.lo $(LDFLAGS) $(LIBS)
+	$(CC) $(CFLAGS) $(CPPFLAGS) -g $(srcdir)/H5detect.c \
+	    $(LDFLAGS) $(LIBS) -o $@
 
 
 @CONCLUDE@
