Purpose: Bug fix.
Description:
The -g in H5detect somehow does not work with 64bit mpicc in arabica.
Remove it for now for better solution.

Platforms tested:
no test as the change is trivia.

Misc. update:

--- a/branches/hdf5_1_6/src/Makefile.in
+++ b/branches/hdf5_1_6/src/Makefile.in
@@ -88,7 +88,7 @@ H5Tinit.c: H5detect
 ## a long time to compile it with any optimization on.  H5detect is used
 ## to generate H5Tinit.c once. So, optimization is not critical.
 H5detect: $(srcdir)/H5detect.c
-	$(CC) $(CFLAGS) $(CPPFLAGS) -g $(srcdir)/H5detect.c \
+	$(CC) $(CFLAGS) $(CPPFLAGS) $(srcdir)/H5detect.c \
 	    $(LDFLAGS) $(LIBS) -o $@
 
 
