Purpose: Bug fix.
Description:
The -g in H5detect somehow does not work with 64bit mpicc in arabica.
Remove it for now for better solution.

Platforms tested:
no test as the change is trivia.

Misc. update:

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -95,8 +95,8 @@ H5Tinit.c: H5detect
 ## Use -g to force no optimization since many compilers (e.g., Intel) takes
 ## a long time to compile it with any optimization on.  H5detect is used
 ## to generate H5Tinit.c once. So, optimization is not critical.
-H5detect: H5detect.lo
-	$(CC) $(CFLAGS) $(CPPFLAGS) -g $(srcdir)/H5detect.c \
+H5detect: $(srcdir)/H5detect.c
+	$(CC) $(CFLAGS) $(CPPFLAGS) $(srcdir)/H5detect.c \
 	    $(LDFLAGS) $(LIBS) -o $@
 
 
